tag: <a> for hyperlink

--- a/html/index.html
+++ b/html/index.html
@@ -4,19 +4,16 @@
         <title>My first webpage</title>
     </head>
     <body>
-        <h1>heading 1</h1>
-        <h2>heading 2</h2>
-        <h3>heading 3</h3>
-        <!-- ...... -->
-        <h6>heading 6</h6>
-        
-        <hr>
-        
-        <p>This is paragraph</p>
+        <!-- Here, we have define a absolute link -->
+        <a href="https://google.com" title="Google" target="_blank">
+            Click here to go to Google
+        </a>
 
-        <pre>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quasi sit voluptates deserunt hic 
-            magni molestiae provident fugiat modi quos similique facere fuga nisi eaque, asperiores rem harum enim nostrum!
-        </pre>
+        <br>
+        <br>
+        <!-- Here, we are defining a relative link, as we have created in our html folder
+        which is "lyrics.html" file -->
+        <a href="lyrics.html" title="Check out the lyrics" target="_blank">Daylight by David, click here</a>
+
     </body>
 </html>
