--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My first webpage</title>
+        <title>Document</title>
+        <style>
+            
+        </style>
     </head>
     <body>
-        <!-- Here, we have define a absolute link -->
-        <a href="https://google.com" title="Google" target="_blank">
-            Click here to go to Google
-        </a>
-
-        <br>
-        <br>
-        <!-- Here, we are defining a relative link, as we have created in our html folder
-        which is "lyrics.html" file -->
-        <a href="lyrics.html" title="Check out the lyrics" target="_blank">Daylight by David, click here</a>
-
     </body>
 </html>
+
